src/objects/Credit__c.object
<CustomObject>
    <description>Dettaglio House Account (Xstore) e Store Credit (E-Commerce)</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Crediti</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Creazione__c</fullName>
        <label>Data Creazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Esportazione__c</fullName>
        <description>Export date of the interface</description>
        <label>Data Esportazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ultimo_movimento__c</fullName>
        <description>Date of the last movement on the House Account</description>
        <label>Data Ultimo Movimento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_House_Account__c</fullName>
        <description>HA Id</description>
        <externalId>true</externalId>
        <label>ID House Account</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_Cliente_DW__c</fullName>
        <label>Id Cliente DW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Xstore__c</fullName>
        <description>party Id</description>
        <label>Id Cliente Xstore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <description>Xstore ID of the Customer that holds the House Account</description>
        <label>Id Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo__c</fullName>
        <description>Value of the House Account</description>
        <label>Importo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>House Account legal entity</description>
        <label>Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Credito</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Credito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crediti</pluralLabel>
    <recordTypes>
        <fullName>House_Account</fullName>
        <active>true</active>
        <description>House account record type</description>
        <label>House Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store_Credit</fullName>
        <active>true</active>
        <description>Store credit record type</description>
        <label>Store Credit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>